// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly when all are selected 1`] = `
<div
  class="pf-c-dropdown"
  id="checkbox_dropdown_id"
>
  <div
    class="pf-c-dropdown__toggle pf-m-split-button"
  >
    <label
      class="pf-c-dropdown__toggle-check"
      for="developer-accounts-bulk-checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="Select all"
        checked=""
        data-testid="developer-accounts-bulk-checkbox"
        id="developer-accounts-bulk-checkbox"
        type="checkbox"
      />
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Select"
      class="pf-c-dropdown__toggle-button"
      id="pf-toggle-id-3"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        accounts_table.data_toolbar.bulk_selector.label
      </span>
      <svg
        aria-hidden="true"
        class="pf-c-dropdown__toggle-icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          transform=""
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`should render properly when none are selected 1`] = `
<div
  class="pf-c-dropdown"
  id="checkbox_dropdown_id"
>
  <div
    class="pf-c-dropdown__toggle pf-m-split-button"
  >
    <label
      class="pf-c-dropdown__toggle-check"
      for="developer-accounts-bulk-checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="Select all"
        data-testid="developer-accounts-bulk-checkbox"
        id="developer-accounts-bulk-checkbox"
        type="checkbox"
      />
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Select"
      class="pf-c-dropdown__toggle-button"
      id="pf-toggle-id-5"
      type="button"
    >
      
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          transform=""
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`should render properly when some are selected 1`] = `
<div
  class="pf-c-dropdown"
  id="checkbox_dropdown_id"
>
  <div
    class="pf-c-dropdown__toggle pf-m-split-button"
  >
    <label
      class="pf-c-dropdown__toggle-check"
      for="developer-accounts-bulk-checkbox"
    >
      <input
        aria-invalid="false"
        aria-label="Select all"
        data-testid="developer-accounts-bulk-checkbox"
        id="developer-accounts-bulk-checkbox"
        type="checkbox"
      />
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Select"
      class="pf-c-dropdown__toggle-button"
      id="pf-toggle-id-4"
      type="button"
    >
      <span
        class="pf-c-dropdown__toggle-text"
      >
        accounts_table.data_toolbar.bulk_selector.label
      </span>
      <svg
        aria-hidden="true"
        class="pf-c-dropdown__toggle-icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          transform=""
        />
      </svg>
    </button>
  </div>
</div>
`;
